// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`htmlGenerator.generateTable generates a table with 1 row, 2 cells 1`] = `
"<table style="width:100%">
<tr>
        <td>
          <p>row1, cell1</p>
        </td>
        <td>
          <p>row1, cell2</p>
        </td>
</tr>
</table>"
`;

exports[`htmlGenerator.generateTable generates a table with 1 row, 3 cells 1`] = `
"<table style="width:100%">
<tr>
        <td>
          <p>row1, cell1</p>
        </td>
        <td>
          <p>row1, cell2</p>
        </td>
        <td>
          <p>row1, cell3</p>
        </td>
</tr>
</table>"
`;

exports[`htmlGenerator.generateTable generates a table with 2 rows, 2 cells 1`] = `
"<table style="width:100%">
<tr>
        <td>
          <p>row1, cell1</p>
        </td>
        <td>
          <p>row1, cell2</p>
        </td>
</tr>
<tr>
        <td>
          <p>row2, cell1</p>
        </td>
        <td>
          <p>row2, cell2</p>
        </td>
</tr>
</table>"
`;
